change the way the cpp test reuses its base build to better work with windows